--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,8 @@ jobs:
         with:
           go-version: '^1.17'
 
-      - name: unit-test
-        run: go test -v ./...
+      - name: run coverage
+        run: go test -v -race -coverprofile=coverage.txt -covermode=atomic ./...
+
+      - name: upload coverage to Codecov
+        run: bash <(curl -s https://codecov.io/bash)
